--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
 <link rel ="stylesheet" href="css/bootstrap.css"/>
 <link rel ="stylesheet" href="css/style.css"/>
 <script type="text/javascript" src ="js/bootstrap.js"></script>
-<title>hyemin</title>
+<title>자소설닷컴</title>
 </head>
 
 <body>
-<div id="wrap">
-	<header id ="header">
-	<ul class="menu">
-		<li><a href ="#">logo</a></li>
-		<li><a href ="#">채용공고</a></li>
-		<li><a href ="#">자기소개서</a></li>
-		<li><a href ="#">이력서</a></li>
-		<li><a href ="#">자소설연구소</a></li>
-		<li><a href ="#">Company</a></li>
-		<li><a href ="#">Login</a></li>
+	<ul>
+		<li><img src="logo.png" alt="logo" width="80" height="30"></a></li>	
+		<li><a href="#">채용공고</a></li>
+		<li><a href="#">자기소개서</a></li>
+		<li><a href="#">이력서</a></li>
+		<li><a href="#">자소설연구소</a></li>
+		<li><a href="#">Company</a></li>
+		<li><a href="#">Login</a></li>
 	</ul>
-	</header>
-	<div id = "container">
-
-	</div>
-	<footer id ="footer">
-	</footer>
-</div>
 </body>
 </html>
