--- a/index.html
+++ b/index.html
@@ -2,21 +2,35 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel ="stylesheet" href="css/bootstrap.css"/>
+<!-- <link rel ="stylesheet" href="css/bootstrap.css"/> -->
 <link rel ="stylesheet" href="css/style.css"/>
-<script type="text/javascript" src ="js/bootstrap.js"></script>
+<!--<script type="text/javascript" src ="js/bootstrap.js"></script>-->
 <title>자소설닷컴</title>
 </head>
 
 <body>
-	<ul>
-		<li><img src="logo.png" alt="logo" width="80" height="30"></a></li>	
-		<li><a href="#">채용공고</a></li>
-		<li><a href="#">자기소개서</a></li>
-		<li><a href="#">이력서</a></li>
-		<li><a href="#">자소설연구소</a></li>
-		<li><a href="#">Company</a></li>
-		<li><a href="#">Login</a></li>
-	</ul>
+	<div id="wrap">
+		<header id ="header">
+			<h1 class="logo"><a href="/"><img src="img/logo.png" alt="자소설닷컴"></a></h1>
+			<ul class="menu">
+				<li><a href="#">채용공고</a></li>
+				<li><a href="#">자기소개서</a></li>
+				<li><a href="#">이력서</a></li>
+				<li><a href="#">자소설연구소</a></li>
+				<li><a href="#">Company</a></li>
+			</ul>
+			<div class="login"><a href="#">Login</a></div>
+		</header>
+		<div id="container"> 
+			<div id="content"> 
+				<div class= "content_area">
+					<p>인턴 구하는게 하늘의 별따기처럼 어렵죠?</h4>
+					<h1>인턴하는데 스팩은 필요 없어</h1><br><br>
+					<button a href="#"><h2>5주동안 인턴 경험하기</h2></button>
+				</div>
+			</div>	
+		</div>
+	</div>
+	
 </body>
 </html>
