--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<div id="content"> 
 				<div class= "content_area">
 					<p>인턴 구하는게 하늘의 별따기처럼 어렵죠?</h4>
-					<h1>인턴하는데 스팩은 필요 없어</h1><br><br>
-					<button a href="#"><h2>5주동안 인턴 경험하기</h2></button>
+					<p>인턴하는데 스팩은 필요 없어</p><br><br><br>
+					<a href="#"><h2>5주동안 인턴 경험하기</h2></a>
 				</div>
 			</div>	
 		</div>
