--- a/index.html
+++ b/index.html
@@ -24,9 +24,34 @@
 		<div id="container"> 
 			<div id="content"> 
 				<div class= "content_area">
-					<p>인턴 구하는게 하늘의 별따기처럼 어렵죠?</h4>
-					<p>인턴하는데 스팩은 필요 없어</p><br><br><br>
-					<a href="#"><h2>5주동안 인턴 경험하기</h2></a>
+					<p class="text1">인턴 구하는게 하늘의 별따기처럼 어렵죠?</p>
+					<p class="text2">인턴하는데 스팩은 필요 없어</p>
+					<p class="button"><a href="#">5주동안 인턴 경험하기</a></p>
+				</div>
+			</div>
+			<div id="content2">
+				<div class="block_area_1">
+					<h3>000님 맞춤공고<span>자소설닷컴 이용 패턴을 분석해 연관성 있는 공고를 추천합니다.</span></h3>
+					<p><a href="#">더보기</a></p>
+					<ul>
+						<li><a href="#"><img src="img/logo.png"alt="kb국민은행">자소설닷컴추천공고</a></li>
+						<li><a href="#"><img src="img/logo.png"alt="hyosung">소프트웨어공학과학생들이 많이 쓴 공고</a></li>
+						<li><a href="#"><img src="img/logo.png"alt="sh서울주택공사">전북대학생들이 많이 본 공고</a></li>
+						<li><a href="#"><img src="img/logo.png"alt="kt is">자소설닷컴추천공고</a></li>
+						<li><a href="#"><img src="img/logo.png"alt="7-eleven">자소설닷컴추천공고</a></li>
+					</ul>
+					<div class="block_area_2">
+						<h3>최근 게시된 인기공고</h3>
+						<p><a href="#">더보기</a></p>
+						<ul>
+							<li><a href="#"><img src="img/logo.png"alt="롯데홈쇼핑">자소설닷컴추천공고</a></li>
+							<li><a href="#"><img src="img/logo.png"alt="LG전자">소프트웨어공학과학생들이 많이 쓴 공고</a></li>
+							<li><a href="#"><img src="img/logo.png"alt="신한금융투자">전북대학생들이 많이 본 공고</a></li>
+							<li><a href="#"><img src="img/logo.png"alt="현대it&e">자소설닷컴추천공고</a></li>
+							<li><a href="#"><img src="img/logo.png"alt="kakao-m">자소설닷컴추천공고</a></li>
+						</ul>
+	
+
 				</div>
 			</div>	
 		</div>
