--- a/index.html
+++ b/index.html
@@ -34,24 +34,79 @@
 					<h3>000님 맞춤공고<span>자소설닷컴 이용 패턴을 분석해 연관성 있는 공고를 추천합니다.</span></h3>
 					<p><a href="#">더보기</a></p>
 					<ul>
-						<li><a href="#"><img src="img/logo.png"alt="kb국민은행">자소설닷컴추천공고</a></li>
-						<li><a href="#"><img src="img/logo.png"alt="hyosung">소프트웨어공학과학생들이 많이 쓴 공고</a></li>
-						<li><a href="#"><img src="img/logo.png"alt="sh서울주택공사">전북대학생들이 많이 본 공고</a></li>
-						<li><a href="#"><img src="img/logo.png"alt="kt is">자소설닷컴추천공고</a></li>
-						<li><a href="#"><img src="img/logo.png"alt="7-eleven">자소설닷컴추천공고</a></li>
+						<div class="kbbox"><a href="#">
+							<li><img src="img/kb.png"alt="kb국민은행">자소설닷컴추천공고</li>
+						</a></div>
+						<div class="hsbox"><a href="#">
+							<li><img src="img/logo.png"alt="hyosung">소프트웨어공학과학생들이 많이 쓴 공고</li>
+						</a></div>	
+						<div class="SHbox"><a href="#">
+							<li><img src="img/logo.png"alt="sh서울주택공사">전북대학생들이 많이 본 공고</li>
+						</a></div>
+						<div class = "KTISbox"><a href="#">
+							<li><img src="img/logo.png"alt="kt is">자소설닷컴추천공고</li>
+						</a></div>
+						<div class="sevenelevenbox"><a href="#">
+							<li><img src="img/logo.png"alt="7-eleven">자소설닷컴추천공고</li>
+						</a></ul>
 					</ul>
-					<div class="block_area_2">
-						<h3>최근 게시된 인기공고</h3>
-						<p><a href="#">더보기</a></p>
-						<ul>
-							<li><a href="#"><img src="img/logo.png"alt="롯데홈쇼핑">자소설닷컴추천공고</a></li>
-							<li><a href="#"><img src="img/logo.png"alt="LG전자">소프트웨어공학과학생들이 많이 쓴 공고</a></li>
-							<li><a href="#"><img src="img/logo.png"alt="신한금융투자">전북대학생들이 많이 본 공고</a></li>
-							<li><a href="#"><img src="img/logo.png"alt="현대it&e">자소설닷컴추천공고</a></li>
-							<li><a href="#"><img src="img/logo.png"alt="kakao-m">자소설닷컴추천공고</a></li>
+				<div class="block_area_2">
+					<h3>최근게시된인기공고</h3>
+					<p><a href="#">더보기</a></p>
+					<ul>
+						<div class="Lottebox"><a href="#">
+							<li><img src="img/logo.png"alt="롯데홈쇼핑">자소설닷컴추천공고</li>
+						</a></div>
+						<div class="LGbox"><a href="#">
+							<li><img src="img/logo.png"alt="LG전자">소프트웨어공학과학생들이 많이 쓴 공고</li>
+						</a></div>
+						<div class="SHBankbox"><a href="#">
+							<li><img src="img/logo.png"alt="신한금융투자">전북대학생들이 많이 본 공고</li>
+						</a></div>
+						<div class="Hyundaibox"><a href="#">
+							<li><img src="img/logo.png"alt="현대it&e">자소설닷컴추천공고</li>
+						</a></div>
+						<div class="KakaoMbox"><a href="#">
+							<li><img src="img/logo.png"alt="kakao-m">자소설닷컴추천공고</li>
+						</a></div>
 						</ul>
-	
+				</div>
+				<div class="block_area_3">
+					<h3>관심있는공고</h3>
+					<p><a href="#">더보기</a></p>
+					<ul>
+						<div class="lottebox1"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="lottebox2"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="lottebox3"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="lottebox4"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+					</ul>
+				</div>
 
+				<div class="block_area_4">
+					<h3>직무별 인기공고</h3>
+					<p><a href="#">더보기</a></p>
+					<ul>
+						<div class="jobbox1"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="jobbox2"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="jobbox3"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+						<div class="jobbox4"><a href="#">
+							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
+						</a></div>
+					</ul>
 				</div>
 			</div>	
 		</div>
