--- a/index.html
+++ b/index.html
@@ -33,84 +33,114 @@
 				<div class="block_area_1">
 					<h3>000님 맞춤공고<span>자소설닷컴 이용 패턴을 분석해 연관성 있는 공고를 추천합니다.</span></h3>
 					<p><a href="#">더보기</a></p>
-					<ul>
-						<div class="kbbox"><a href="#">
-							<li><img src="img/kb.png"alt="kb국민은행">자소설닷컴추천공고</li>
-						</a></div>
-						<div class="hsbox"><a href="#">
-							<li><img src="img/logo.png"alt="hyosung">소프트웨어공학과학생들이 많이 쓴 공고</li>
-						</a></div>	
-						<div class="SHbox"><a href="#">
-							<li><img src="img/logo.png"alt="sh서울주택공사">전북대학생들이 많이 본 공고</li>
-						</a></div>
-						<div class = "KTISbox"><a href="#">
-							<li><img src="img/logo.png"alt="kt is">자소설닷컴추천공고</li>
-						</a></div>
-						<div class="sevenelevenbox"><a href="#">
-							<li><img src="img/logo.png"alt="7-eleven">자소설닷컴추천공고</li>
-						</a></ul>
+					<ul>					
+						<li>
+							<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴추천공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과학생들이 많이 쓴 공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴추천공고</span></a>
+						</li>
 					</ul>
+				</div>
 				<div class="block_area_2">
 					<h3>최근게시된인기공고</h3>
 					<p><a href="#">더보기</a></p>
-					<ul>
-						<div class="Lottebox"><a href="#">
-							<li><img src="img/logo.png"alt="롯데홈쇼핑">자소설닷컴추천공고</li>
-						</a></div>
-						<div class="LGbox"><a href="#">
-							<li><img src="img/logo.png"alt="LG전자">소프트웨어공학과학생들이 많이 쓴 공고</li>
-						</a></div>
-						<div class="SHBankbox"><a href="#">
-							<li><img src="img/logo.png"alt="신한금융투자">전북대학생들이 많이 본 공고</li>
-						</a></div>
-						<div class="Hyundaibox"><a href="#">
-							<li><img src="img/logo.png"alt="현대it&e">자소설닷컴추천공고</li>
-						</a></div>
-						<div class="KakaoMbox"><a href="#">
-							<li><img src="img/logo.png"alt="kakao-m">자소설닷컴추천공고</li>
-						</a></div>
-						</ul>
-				</div>
+					<ul>					
+						<li>
+							<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴 추천공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과 학생들이 많이 쓴 공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
+						</li>
+						<li>
+							<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴 추천공고</span></a>
+						</li>
+					</ul>
+				</div>	
 				<div class="block_area_3">
 					<h3>관심있는공고</h3>
 					<p><a href="#">더보기</a></p>
-					<ul>
-						<div class="lottebox1"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="lottebox2"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="lottebox3"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="lottebox4"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
+					<ul>					
+						<li>
+							<a href="#">
+								<span class="boxText1">롯데홈쇼핑</span>
+								<span class="boxText2">영업관리</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">sh서울주택도시공사</span>
+								<span class="boxText2">관리직</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">현대IT&E</span>
+								<span class="boxText2">IT</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">kakaaM</span>
+								<span class="boxText2">SW</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
 					</ul>
 				</div>
-
 				<div class="block_area_4">
 					<h3>직무별 인기공고</h3>
 					<p><a href="#">더보기</a></p>
-					<ul>
-						<div class="jobbox1"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="jobbox2"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="jobbox3"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
-						<div class="jobbox4"><a href="#">
-							<li>롯데홈쇼핑<span>영업관리 8시간남음｜2867명 작성</span></li>
-						</a></div>
+					<ul>					
+						<li>
+							<a href="#">
+								<span class="boxText1">롯데홈쇼핑</span>
+								<span class="boxText2">영업관리</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">sh서울주택도시공사</span>
+								<span class="boxText2">관리직</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">현대IT&E</span>
+								<span class="boxText2">IT</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="boxText1">kakaaM</span>
+								<span class="boxText2">SW</span>
+								<span class="boxText3">8시간 남음｜2867명 작성</span>
+							</a>
+						</li>
 					</ul>
 				</div>
-			</div>	
-		</div>
-	</div>
-	
+				<div class="company">
+					<span class="company_main">기업회원이신가요?</span>
+					<span class="company_text">기업 페이지에서 채용 공고 등록과 광고 상품 예약/확인이 가능합니다.</span>
+					<a class="company_box">기업페이지가기</a>
+				</div>
+		
+			</div>
+	</div>	
 </body>
 </html>
