--- a/index.html
+++ b/index.html
@@ -139,7 +139,19 @@
 					<span class="company_text">기업 페이지에서 채용 공고 등록과 광고 상품 예약/확인이 가능합니다.</span>
 					<a class="company_box">기업페이지가기</a>
 				</div>
-		
+				<div id="container_end"> 
+					<div id="content_end"> 
+						<div class= "content_end_area">
+							<p class="end_text1">자소설닷컴 문의하기｜개인정보취급방침｜제휴/광고</p>
+							<p class="end_text2">(주)앵커리어(대표:윤상호)｜개인정보관리자:윤상호</p>
+							<p class="end_text3">서울시 강남구 선릉로 76길 20, 301호(대치동 유영빌딩)｜대표번호:02-6264-7582 광고문의:02-6264-7583</p>
+							<p class="end_text4">사업자등록:138-87-00058｜직업정보제공사업:J12000020160017｜통신판매업:2016-서울강남-00784</p>
+							<p class="end_text5">CopyrightAnchoreerCo.Inc.All right reServerd.</p>
+							<a href="#"><img src="/img/korea7.jpg" alt="Notion"></a>
+							<a href="#"><img src="/img/kb.png" alt="instagram"></a>
+							<a href="#"><img src="/img/logo.png" alt="facebook"></a>
+						</div>
+					</div>		
 			</div>
 	</div>	
 </body>
