--- a/index.html
+++ b/index.html
@@ -30,128 +30,131 @@
 				</div>
 			</div>
 			<div id="content2">
-				<div class="block_area_1">
-					<h3>000님 맞춤공고<span>자소설닷컴 이용 패턴을 분석해 연관성 있는 공고를 추천합니다.</span></h3>
-					<p><a href="#">더보기</a></p>
-					<ul>					
-						<li>
-							<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴추천공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과학생들이 많이 쓴 공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴추천공고</span></a>
-						</li>
-					</ul>
-				</div>
-				<div class="block_area_2">
-					<h3>최근게시된인기공고</h3>
-					<p><a href="#">더보기</a></p>
-					<ul>					
-						<li>
-							<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴 추천공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과 학생들이 많이 쓴 공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
-						</li>
-						<li>
-							<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴 추천공고</span></a>
-						</li>
-					</ul>
-				</div>	
-				<div class="block_area_3">
-					<h3>관심있는공고</h3>
-					<p><a href="#">더보기</a></p>
-					<ul>					
-						<li>
-							<a href="#">
-								<span class="boxText1">롯데홈쇼핑</span>
-								<span class="boxText2">영업관리</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">sh서울주택도시공사</span>
-								<span class="boxText2">관리직</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">현대IT&E</span>
-								<span class="boxText2">IT</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">kakaaM</span>
-								<span class="boxText2">SW</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="block_area_4">
-					<h3>직무별 인기공고</h3>
-					<p><a href="#">더보기</a></p>
-					<ul>					
-						<li>
-							<a href="#">
-								<span class="boxText1">롯데홈쇼핑</span>
-								<span class="boxText2">영업관리</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">sh서울주택도시공사</span>
-								<span class="boxText2">관리직</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">현대IT&E</span>
-								<span class="boxText2">IT</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<span class="boxText1">kakaaM</span>
-								<span class="boxText2">SW</span>
-								<span class="boxText3">8시간 남음｜2867명 작성</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="company">
-					<span class="company_main">기업회원이신가요?</span>
-					<span class="company_text">기업 페이지에서 채용 공고 등록과 광고 상품 예약/확인이 가능합니다.</span>
-					<a class="company_box">기업페이지가기</a>
-				</div>
-				<div id="container_end"> 
-					<div id="content_end"> 
-						<div class= "content_end_area">
-							<p class="end_text1">자소설닷컴 문의하기｜개인정보취급방침｜제휴/광고</p>
-							<p class="end_text2">(주)앵커리어(대표:윤상호)｜개인정보관리자:윤상호</p>
-							<p class="end_text3">서울시 강남구 선릉로 76길 20, 301호(대치동 유영빌딩)｜대표번호:02-6264-7582 광고문의:02-6264-7583</p>
-							<p class="end_text4">사업자등록:138-87-00058｜직업정보제공사업:J12000020160017｜통신판매업:2016-서울강남-00784</p>
-							<p class="end_text5">CopyrightAnchoreerCo.Inc.All right reServerd.</p>
-							<a href="#"><img src="/img/korea7.jpg" alt="Notion"></a>
-							<a href="#"><img src="/img/kb.png" alt="instagram"></a>
-							<a href="#"><img src="/img/logo.png" alt="facebook"></a>
-						</div>
-					</div>		
+				<div id="content2_area">
+					<div class="block_area_1">
+						<h3>000님 맞춤공고<span>자소설닷컴 이용 패턴을 분석해 연관성 있는 공고를 추천합니다.</span></h3>
+						<p><a href="#">더보기</a></p>
+						<ul>					
+							<li>
+								<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴추천공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과학생들이 많이 쓴 공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴추천공고</span></a>
+							</li>
+						</ul>
+					</div>
+					<div class="block_area_2">
+						<h3>최근게시된인기공고</h3>
+						<p><a href="#">더보기</a></p>
+						<ul>					
+							<li>
+								<a href="#"><img src="img/kb.png" alt="kb국민은행"><span>자소설닷컴 추천공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/kb.png" alt="hyosung"><span>소프트웨어공학과 학생들이 많이 쓴 공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/sh.png" alt="sh서울주택도시공사"><span>전북대학교 학생들이 많이 본 공고</span></a>
+							</li>
+							<li>
+								<a href="#"><img src="img/korea7.jpg" alt="7-eleven"><span>자소설닷컴 추천공고</span></a>
+							</li>
+						</ul>
+					</div>	
+					<div class="block_area_3">
+						<h3>관심있는공고</h3>
+						<p><a href="#">더보기</a></p>
+						<ul>					
+							<li>
+								<a href="#">
+									<span class="boxText1">롯데홈쇼핑</span>
+									<span class="boxText2">영업관리</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">sh서울주택도시공사</span>
+									<span class="boxText2">관리직</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">현대IT&E</span>
+									<span class="boxText2">IT</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">kakaaM</span>
+									<span class="boxText2">SW</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="block_area_4">
+						<h3>직무별 인기공고</h3>
+						<p><a href="#">더보기</a></p>
+						<ul>					
+							<li>
+								<a href="#">
+									<span class="boxText1">롯데홈쇼핑</span>
+									<span class="boxText2">영업관리</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">sh서울주택도시공사</span>
+									<span class="boxText2">관리직</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">현대IT&E</span>
+									<span class="boxText2">IT</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="boxText1">kakaaM</span>
+									<span class="boxText2">SW</span>
+									<span class="boxText3">8시간 남음｜2867명 작성</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="company">
+						<span class="company_main">기업회원이신가요?</span>
+						<span class="company_text">기업 페이지에서 채용 공고 등록과 광고 상품 예약/확인이 가능합니다.</span><br>
+						<a class="company_box">기업페이지가기</a>
+					</div>
+			</div>
+			<div id="container_end"> 
+				<div id="content_end"> 
+					<div class= "content_end_area">
+						<p class="end_text1">자소설닷컴 문의하기｜개인정보취급방침｜제휴/광고</p>
+						<p class="end_text2">(주)앵커리어(대표:윤상호)｜개인정보관리자:윤상호</p>
+						<p class="end_text3">서울시 강남구 선릉로 76길 20, 301호(대치동 유영빌딩)｜대표번호:02-6264-7582 광고문의:02-6264-7583</p>
+						<p class="end_text4">사업자등록:138-87-00058｜직업정보제공사업:J12000020160017｜통신판매업:2016-서울강남-00784</p>
+						<p class="end_text5">CopyrightAnchoreerCo.Inc.All right reServerd.</p>
+						<a href="#"><img src="/img/korea7.jpg" alt="Notion"></a>
+						<a href="#"><img src="/img/kb.png" alt="instagram"></a>
+						<a href="#"><img src="/img/logo.png" alt="facebook"></a>
+					</div>
+				</div>		
 			</div>
 	</div>	
 </body>
