--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<div id="wrap">
 		<header id ="header">
+			<div class="menu_m"><a href="#"><img src="img/menu.png" alt="menu_m"></a></div>
 			<h1 class="logo"><a href="/"><img src="img/logo.png" alt="자소설닷컴"></a></h1>
+			<div class="seach_m"><a href="#"><img src="img/seach.png" alt="seach_m"></a></div>
 			<ul class="menu">
 				<li><a href="#">채용공고</a></li>
 				<li><a href="#">자기소개서</a></li>
@@ -26,6 +28,8 @@
 				<div class= "content_area">
 					<p class="text1">인턴 구하는게 하늘의 별따기처럼 어렵죠?</p>
 					<p class="text2">인턴하는데 스팩은 필요 없어</p>
+					<p class="left_btn"><a href="#"><img src="img/left_button.png" alt="left_btn"></a></p>
+					<p class="right_btn"><a href="#"><img src="img/right_button.png" alt="right_btn"></a></p>
 					<p class="button"><a href="#">5주동안 인턴 경험하기</a></p>
 				</div>
 			</div>
